--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=userService
+
+
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userServiceMay
+spring.datasource.username=UserBacthMay
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql:true
+server.port=4141
+logging.level.org.springframework=TRACE
+
+# Server configuration
+#server.port=9000
+
+# Logging configuration
+logging.level.org.springframework.security=trace
