--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=userService
 
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userServiceMay
 spring.datasource.username=UserBacthMay
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
-server.port=4141
+server.port=4145
 logging.level.org.springframework=TRACE
 
 # Server configuration
